--- a/index.html
+++ b/index.html
@@ -1,136 +1,200 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DR9.AI - Inteligência Artificial e Automação Premium</title>
-    <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
+<meta name="description" content="DR9.AI - Soluções em IA, automação, licenças digitais e consultoria para empresas.">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="particles-js"></div>
 
-    <div class="floating floating-1">🚀</div>
-    <div class="floating floating-2">🤖</div>
-    <div class="floating floating-3">💡</div>
+<!-- HEADER -->
+<header id="header">
+  <div class="container">
+    <a href="#home" class="logo"><i class="fas fa-robot"></i> DR9.AI</a>
+    <button id="mobileMenu" class="mobile-menu"><i class="fas fa-bars"></i></button>
+    <nav id="mainNav">
+      <ul>
+        <li><a href="#home">Início</a></li>
+        <li><a href="#services">Serviços</a></li>
+        <li><a href="#contact">Contato</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
-    <header id="header">
-        <div class="container">
-            <div class="header-content">
-                <a href="#" class="logo"><i class="fas fa-robot logo-icon"></i> DR9.AI</a>
-                <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
-                <nav id="mainNav">
-                    <ul>
-                        <li><a href="#home">Início</a></li>
-                        <li><a href="#services">Serviços</a></li>
-                        <li><a href="#contact">Contato</a></li>
-                    </ul>
-                </nav>
-            </div>
+<!-- HERO -->
+<section class="hero" id="home">
+  <div class="container">
+    <h1 class="gradient-text">DR9.AI</h1>
+    <p class="typewriter">Softwares, IA e Automação Descomplicada</p>
+    <div class="hero-buttons">
+      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
+    </div>
+    <span class="badge">✅ Suporte humano + IA em tempo real</span>
+  </div>
+</section>
+
+<!-- SERVICES -->
+<section class="services" id="services">
+  <div class="container">
+    <h2>Serviços DR9.AI</h2>
+    <div class="cards-grid">
+
+      <!-- IA e Automação -->
+      <div class="card">
+        <i class="fas fa-robot"></i>
+        <h3>Automação de Processos (RPA)</h3>
+        <p>Automatize tarefas repetitivas e manuais, economizando tempo e recursos.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Ver Demonstração</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-comments"></i>
+        <h3>Chatbots Inteligentes</h3>
+        <p>Atendimento 24/7 com integração a WhatsApp e Telegram para suporte automatizado.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-chart-line"></i>
+        <h3>Análise de Dados Preditiva</h3>
+        <p>Previsão de vendas e comportamento do usuário para decisões mais assertivas.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-plug"></i>
+        <h3>Integração via APIs</h3>
+        <p>Conecte sistemas sem intervenção manual, agilizando processos internos.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-brain"></i>
+        <h3>Machine Learning Personalizado</h3>
+        <p>Soluções de IA adaptadas para cada cliente e necessidade específica.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Ver Demonstração</a>
+      </div>
+
+      <!-- Licenças Digitais -->
+      <div class="card">
+        <i class="fas fa-key"></i>
+        <h3>UClockTool</h3>
+        <p>Licença digital para controle de horários e produtividade.</p>
+        <a class="btn" href="#">Solicitar Licença</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-cogs"></i>
+        <h3>Chimera</h3>
+        <p>Licença digital para automação e análise avançada.</p>
+        <a class="btn" href="#">Solicitar Licença</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-box"></i>
+        <h3>Pacote Tático</h3>
+        <p>Conjunto de licenças estratégicas para equipes e empresas.</p>
+        <a class="btn" href="#">Solicitar Licença</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <!-- Consultoria em TI -->
+      <div class="card">
+        <i class="fas fa-shield-alt"></i>
+        <h3>Auditoria e Segurança de Rede</h3>
+        <p>Identificação de vulnerabilidades e proteção de dados empresariais.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Ver Demonstração</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-cloud"></i>
+        <h3>Migração para Cloud</h3>
+        <p>Serviços de migração para AWS, Azure e Google Cloud.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-tools"></i>
+        <h3>Suporte e Manutenção</h3>
+        <p>Monitoramento e suporte contínuo para sistemas, servidores e redes.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <!-- Sistemas Personalizados -->
+      <div class="card">
+        <i class="fas fa-laptop-code"></i>
+        <h3>Desenvolvimento Web/Mobile</h3>
+        <p>Softwares sob medida para atender todas as necessidades do seu negócio.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Ver Demonstração</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-chart-pie"></i>
+        <h3>Dashboards Inteligentes</h3>
+        <p>Controle de dados e relatórios avançados para gestão estratégica.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+      <div class="card">
+        <i class="fas fa-plug"></i>
+        <h3>Integração de Sistemas</h3>
+        <p>Conecte sistemas antigos com novas soluções digitais de forma eficiente.</p>
+        <a class="btn" href="#">Solicitar Serviço</a>
+        <a class="btn" href="#">Saiba Mais</a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CTA -->
+<section class="cta" id="contact">
+  <div class="container">
+    <h2>Pronto para revolucionar seu negócio?</h2>
+    <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
+    <div class="hero-buttons">
+      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-column">
+        <h3>DR9.AI</h3>
+        <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <a href="#"><i class="fab fa-telegram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
-    </header>
+      </div>
+    </div>
+    <p class="copyright">&copy; 2025 DR9.AI - Todos os direitos reservados.</p>
+  </div>
+</footer>
 
-    <section class="hero" id="home">
-        <div class="container">
-            <div class="hero-content">
-                <h1>DR9.AI</h1>
-                <p>Softwares, IA e Automação Descomplicada</p>
-
-                <div class="checkbox-list">
-                    <div class="checkbox-item"><div class="checkbox-icon checkbox-available">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
-                    <div class="checkbox-item"><div class="checkbox-icon checkbox-available">✓</div><div class="checkbox-text">IA e automação para Empreendedores</div></div>
-                    <div class="checkbox-item"><div class="checkbox-icon checkbox-available">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
-                </div>
-
-                <div class="buttons">
-                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="features" id="services">
-        <div class="container">
-            <div class="section-title">
-                <h2>Nossas Soluções em IA</h2>
-                <p>Tecnologia avançada para impulsionar seu negócio ao próximo nível</p>
-            </div>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-key"></i></div>
-                    <h3>DM para Licenças Exclusivas</h3>
-                    <p>Sistema de gerenciamento de licenças digitais com controle total, segurança avançada e relatórios detalhados.</p>
-                    <span class="status status-available">Disponível</span>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-brain"></i></div>
-                    <h3>IA e Automação para Empreendedores</h3>
-                    <p>Implementamos inteligência artificial personalizada para automatizar processos e aumentar sua produtividade.</p>
-                    <span class="status status-available">Disponível</span>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon"><i class="fas fa-id-card"></i></div>
-                    <h3>Licenças Digitais Fáceis de Usar</h3>
-                    <p>Soluções intuitivas de licenciamento com interface amigável, suporte completo e integração simplificada.</p>
-                    <span class="status status-available">Disponível</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="cta" id="contact">
-        <div class="container">
-            <div class="cta-content">
-                <h2>Pronto para revolucionar seu negócio?</h2>
-                <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
-                <div class="buttons">
-                    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-                    <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h3>DR9.AI</h3>
-                    <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
-                    <div class="social-links">
-                        <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="footer-column">
-                    <h3>Serviços</h3>
-                    <ul>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> IA e Automação</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Licenças Digitais</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoria em TI</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Sistemas Personalizados</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3>Contato</h3>
-                    <ul>
-                        <li><a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-                        <li><a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i> Telegram</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i> contato@dr9ai.com</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; 2023 DR9.AI - Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
