--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <h1 class="gradient-text">DR9.AI</h1>
     <p class="typewriter">Softwares, IA e Automação Descomplicada</p>
     <div class="hero-buttons">
-      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-      <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
+      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
     </div>
     <span class="badge">✅ Suporte humano + IA em tempo real</span>
   </div>
@@ -44,121 +44,37 @@
     <h2>Serviços DR9.AI</h2>
     <div class="cards-grid">
 
-      <!-- IA e Automação -->
-      <div class="card">
-        <i class="fas fa-robot"></i>
-        <h3>Automação de Processos (RPA)</h3>
-        <p>Automatize tarefas repetitivas e manuais, economizando tempo e recursos.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Ver Demonstração</a>
-      </div>
+      <!-- Cards de Serviços -->
+      <div class="card"><i class="fas fa-robot"></i><h3>Automação de Processos (RPA)</h3><p>Automatize tarefas repetitivas e manuais, economizando tempo e recursos.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
 
-      <div class="card">
-        <i class="fas fa-comments"></i>
-        <h3>Chatbots Inteligentes</h3>
-        <p>Atendimento 24/7 com integração a WhatsApp e Telegram para suporte automatizado.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-comments"></i><h3>Chatbots Inteligentes</h3><p>Atendimento 24/7 com integração a WhatsApp e Telegram para suporte automatizado.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-chart-line"></i>
-        <h3>Análise de Dados Preditiva</h3>
-        <p>Previsão de vendas e comportamento do usuário para decisões mais assertivas.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-chart-line"></i><h3>Análise de Dados Preditiva</h3><p>Previsão de vendas e comportamento do usuário para decisões mais assertivas.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-plug"></i>
-        <h3>Integração via APIs</h3>
-        <p>Conecte sistemas sem intervenção manual, agilizando processos internos.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-plug"></i><h3>Integração via APIs</h3><p>Conecte sistemas sem intervenção manual, agilizando processos internos.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-brain"></i>
-        <h3>Machine Learning Personalizado</h3>
-        <p>Soluções de IA adaptadas para cada cliente e necessidade específica.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Ver Demonstração</a>
-      </div>
+      <div class="card"><i class="fas fa-brain"></i><h3>Machine Learning Personalizado</h3><p>Soluções de IA adaptadas para cada cliente e necessidade específica.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
 
       <!-- Licenças Digitais -->
-      <div class="card">
-        <i class="fas fa-key"></i>
-        <h3>UClockTool</h3>
-        <p>Licença digital para controle de horários e produtividade.</p>
-        <a class="btn" href="#">Solicitar Licença</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-key"></i><h3>UClockTool</h3><p>Licença digital para controle de horários e produtividade.</p><a class="btn" href="#">Solicitar Licença</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-cogs"></i>
-        <h3>Chimera</h3>
-        <p>Licença digital para automação e análise avançada.</p>
-        <a class="btn" href="#">Solicitar Licença</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-cogs"></i><h3>Chimera</h3><p>Licença digital para automação e análise avançada.</p><a class="btn" href="#">Solicitar Licença</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-box"></i>
-        <h3>Pacote Tático</h3>
-        <p>Conjunto de licenças estratégicas para equipes e empresas.</p>
-        <a class="btn" href="#">Solicitar Licença</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-box"></i><h3>Pacote Tático</h3><p>Conjunto de licenças estratégicas para equipes e empresas.</p><a class="btn" href="#">Solicitar Licença</a><a class="btn" href="#">Saiba Mais</a></div>
 
       <!-- Consultoria em TI -->
-      <div class="card">
-        <i class="fas fa-shield-alt"></i>
-        <h3>Auditoria e Segurança de Rede</h3>
-        <p>Identificação de vulnerabilidades e proteção de dados empresariais.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Ver Demonstração</a>
-      </div>
+      <div class="card"><i class="fas fa-shield-alt"></i><h3>Auditoria e Segurança de Rede</h3><p>Identificação de vulnerabilidades e proteção de dados empresariais.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
 
-      <div class="card">
-        <i class="fas fa-cloud"></i>
-        <h3>Migração para Cloud</h3>
-        <p>Serviços de migração para AWS, Azure e Google Cloud.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-cloud"></i><h3>Migração para Cloud</h3><p>Serviços de migração para AWS, Azure e Google Cloud.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-tools"></i>
-        <h3>Suporte e Manutenção</h3>
-        <p>Monitoramento e suporte contínuo para sistemas, servidores e redes.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-tools"></i><h3>Suporte e Manutenção</h3><p>Monitoramento e suporte contínuo para sistemas, servidores e redes.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
       <!-- Sistemas Personalizados -->
-      <div class="card">
-        <i class="fas fa-laptop-code"></i>
-        <h3>Desenvolvimento Web/Mobile</h3>
-        <p>Softwares sob medida para atender todas as necessidades do seu negócio.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Ver Demonstração</a>
-      </div>
+      <div class="card"><i class="fas fa-laptop-code"></i><h3>Desenvolvimento Web/Mobile</h3><p>Softwares sob medida para atender todas as necessidades do seu negócio.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
 
-      <div class="card">
-        <i class="fas fa-chart-pie"></i>
-        <h3>Dashboards Inteligentes</h3>
-        <p>Controle de dados e relatórios avançados para gestão estratégica.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-chart-pie"></i><h3>Dashboards Inteligentes</h3><p>Controle de dados e relatórios avançados para gestão estratégica.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
-      <div class="card">
-        <i class="fas fa-plug"></i>
-        <h3>Integração de Sistemas</h3>
-        <p>Conecte sistemas antigos com novas soluções digitais de forma eficiente.</p>
-        <a class="btn" href="#">Solicitar Serviço</a>
-        <a class="btn" href="#">Saiba Mais</a>
-      </div>
+      <div class="card"><i class="fas fa-plug"></i><h3>Integração de Sistemas</h3><p>Conecte sistemas antigos com novas soluções digitais de forma eficiente.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
 
     </div>
   </div>
@@ -170,8 +86,8 @@
     <h2>Pronto para revolucionar seu negócio?</h2>
     <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
     <div class="hero-buttons">
-      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-      <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Telegram</a>
+      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
     </div>
   </div>
 </section>
