--- a/index.html
+++ b/index.html
@@ -3,112 +3,67 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
-<meta name="description" content="DR9.AI - Soluções em IA, automação, licenças digitais e consultoria para empresas.">
+<title>DR9.AI - Serviços Organizados</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HEADER -->
-<header id="header">
-  <div class="container">
-    <a href="#home" class="logo"><i class="fas fa-robot"></i> DR9.AI</a>
-    <button id="mobileMenu" class="mobile-menu"><i class="fas fa-bars"></i></button>
-    <nav id="mainNav">
-      <ul>
-        <li><a href="#home">Início</a></li>
-        <li><a href="#services">Serviços</a></li>
-        <li><a href="#contact">Contato</a></li>
-      </ul>
-    </nav>
-  </div>
+<header>
+<a href="#home" class="logo"><i class="fas fa-robot"></i> DR9.AI</a>
+<nav>
+<ul>
+<li><a href="#home">Início</a></li>
+<li><a href="#services">Serviços</a></li>
+<li><a href="#contact">Contato</a></li>
+</ul>
+</nav>
 </header>
 
-<!-- HERO -->
 <section class="hero" id="home">
-  <div class="container">
-    <h1 class="gradient-text">DR9.AI</h1>
-    <p class="typewriter">Softwares, IA e Automação Descomplicada</p>
-    <div class="hero-buttons">
-      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-      <a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
-    </div>
-    <span class="badge">✅ Suporte humano + IA em tempo real</span>
-  </div>
+<h1 class="gradient-text">DR9.AI</h1>
+<p class="typewriter">Softwares, IA e Automação Descomplicada</p>
+<div class="hero-buttons">
+<a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+<a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
+</div>
+<span class="badge">✅ Suporte humano + IA em tempo real</span>
 </section>
 
-<!-- SERVICES -->
 <section class="services" id="services">
-  <div class="container">
-    <h2>Serviços DR9.AI</h2>
-    <div class="cards-grid">
-
-      <!-- Cards de Serviços -->
-      <div class="card"><i class="fas fa-robot"></i><h3>Automação de Processos (RPA)</h3><p>Automatize tarefas repetitivas e manuais, economizando tempo e recursos.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
-
-      <div class="card"><i class="fas fa-comments"></i><h3>Chatbots Inteligentes</h3><p>Atendimento 24/7 com integração a WhatsApp e Telegram para suporte automatizado.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-chart-line"></i><h3>Análise de Dados Preditiva</h3><p>Previsão de vendas e comportamento do usuário para decisões mais assertivas.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-plug"></i><h3>Integração via APIs</h3><p>Conecte sistemas sem intervenção manual, agilizando processos internos.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-brain"></i><h3>Machine Learning Personalizado</h3><p>Soluções de IA adaptadas para cada cliente e necessidade específica.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
-
-      <!-- Licenças Digitais -->
-      <div class="card"><i class="fas fa-key"></i><h3>UClockTool</h3><p>Licença digital para controle de horários e produtividade.</p><a class="btn" href="#">Solicitar Licença</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-cogs"></i><h3>Chimera</h3><p>Licença digital para automação e análise avançada.</p><a class="btn" href="#">Solicitar Licença</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-box"></i><h3>Pacote Tático</h3><p>Conjunto de licenças estratégicas para equipes e empresas.</p><a class="btn" href="#">Solicitar Licença</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <!-- Consultoria em TI -->
-      <div class="card"><i class="fas fa-shield-alt"></i><h3>Auditoria e Segurança de Rede</h3><p>Identificação de vulnerabilidades e proteção de dados empresariais.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
-
-      <div class="card"><i class="fas fa-cloud"></i><h3>Migração para Cloud</h3><p>Serviços de migração para AWS, Azure e Google Cloud.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-tools"></i><h3>Suporte e Manutenção</h3><p>Monitoramento e suporte contínuo para sistemas, servidores e redes.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <!-- Sistemas Personalizados -->
-      <div class="card"><i class="fas fa-laptop-code"></i><h3>Desenvolvimento Web/Mobile</h3><p>Softwares sob medida para atender todas as necessidades do seu negócio.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Ver Demonstração</a></div>
-
-      <div class="card"><i class="fas fa-chart-pie"></i><h3>Dashboards Inteligentes</h3><p>Controle de dados e relatórios avançados para gestão estratégica.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-      <div class="card"><i class="fas fa-plug"></i><h3>Integração de Sistemas</h3><p>Conecte sistemas antigos com novas soluções digitais de forma eficiente.</p><a class="btn" href="#">Solicitar Serviço</a><a class="btn" href="#">Saiba Mais</a></div>
-
-    </div>
-  </div>
+<h2>Serviços DR9.AI</h2>
+<div class="accordion">
+  <!-- Categorias e cards (igual ao código anterior) -->
+</div>
 </section>
 
-<!-- CTA -->
+<div class="modal" id="modal">
+<div class="modal-content">
+<span class="close-btn" id="closeModal">&times;</span>
+<h3 id="modalTitle"></h3>
+<p id="modalDesc"></p>
+</div>
+</div>
+
 <section class="cta" id="contact">
-  <div class="container">
-    <h2>Pronto para revolucionar seu negócio?</h2>
-    <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
-    <div class="hero-buttons">
-      <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-      <a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
-    </div>
-  </div>
+<h2>Pronto para revolucionar seu negócio?</h2>
+<p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
+<div class="hero-buttons">
+<a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+<a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
+</div>
 </section>
 
-<!-- FOOTER -->
 <footer>
-  <div class="container">
-    <div class="footer-content">
-      <div class="footer-column">
-        <h3>DR9.AI</h3>
-        <p>Inteligência Artificial e Automação Descomplicada para empreendedores que buscam inovação e resultados.</p>
-        <div class="social-links">
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
-          <a href="#"><i class="fab fa-telegram"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-      </div>
-    </div>
-    <p class="copyright">&copy; 2025 DR9.AI - Todos os direitos reservados.</p>
-  </div>
+<h3>DR9.AI</h3>
+<div class="social-links">
+<a href="#"><i class="fab fa-whatsapp"></i></a>
+<a href="#"><i class="fab fa-telegram"></i></a>
+<a href="#"><i class="fab fa-instagram"></i></a>
+<a href="#"><i class="fab fa-linkedin-in"></i></a>
+</div>
+<p>&copy; 2025 DR9.AI - Todos os direitos reservados.</p>
 </footer>
 
 <script src="script.js"></script>
