--- a/index.html
+++ b/index.html
@@ -3,276 +3,181 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DR9.AI - Serviços Organizados</title>
-<meta name="description" content="DR9.AI - Soluções em IA, automação, licenças digitais e consultoria para empresas.">
+<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
+<meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-<style>
-:root {
-  --primary:#00f7ff;
-  --primary-hover:#00d0ff;
-  --bg:#0d0d0d;
-  --card-bg:#1a1a1a;
-  --text:#f0f0f0;
-  --footer-bg:linear-gradient(135deg,#0f0f0f,#1a1a1a);
-}
-
-/* Reset */
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background:var(--bg);color:var(--text);overflow-x:hidden;}
-a{text-decoration:none;}
-
-/* Header */
-header{width:100%;padding:20px 50px;display:flex;justify-content:space-between;align-items:center;position:sticky;top:0;background:rgba(13,13,13,0.95);z-index:1000;}
-header .logo{font-size:1.8rem;color:var(--primary);}
-header nav ul{display:flex;gap:25px;list-style:none;}
-header nav ul li a{color:var(--text);font-weight:500;transition:0.3s;}
-header nav ul li a:hover{color:var(--primary);}
-
-/* Hero */
-.hero{text-align:center;padding:120px 20px 60px;}
-.gradient-text{font-size:3rem;font-weight:800;background:linear-gradient(-45deg,#00f7ff,#ff00f7,#00ff90,#ffb400);background-size:400% 400%;-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:gradientBG 8s ease infinite;}
-@keyframes gradientBG{0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
-.typewriter{display:inline-block;overflow:hidden;border-right:.15em solid var(--primary);white-space:nowrap;letter-spacing:.05em;animation:typing 4s steps(40,end),blink .75s step-end infinite;margin-top:15px;font-size:1.2rem;}
-@keyframes typing{from{width:0;}to{width:100%;}}
-@keyframes blink{from,to{border-color:transparent;}50%{border-color:var(--primary);}}
-.hero-buttons{margin-top:25px;display:flex;justify-content:center;gap:20px;flex-wrap:wrap;}
-.btn{display:inline-block;padding:12px 25px;border-radius:8px;font-weight:600;cursor:pointer;transition:all 0.3s ease;}
-.btn-primary{background:var(--primary);color:#0d0d0d;}
-.btn-primary:hover{background:var(--primary-hover);transform:scale(1.05);}
-.btn-outline{background:transparent;color:var(--primary);border:2px solid var(--primary);}
-.btn-outline:hover{background:var(--primary);color:#0d0d0d;transform:scale(1.05);}
-.pulse{animation:pulseAnim 2s infinite;}
-@keyframes pulseAnim{0%{transform:scale(1);}50%{transform:scale(1.05);}100%{transform:scale(1);}}
-.badge{display:inline-block;margin-top:20px;padding:8px 15px;background:var(--primary);color:#0d0d0d;border-radius:20px;font-weight:600;}
-
-/* Tabs */
-.tabs{max-width:1200px;margin:0 auto;padding:60px 20px;}
-.tab-buttons{display:flex;justify-content:center;gap:20px;margin-bottom:40px;flex-wrap:wrap;}
-.tab-buttons button{padding:10px 20px;border:none;border-radius:8px;font-weight:600;background:var(--card-bg);color:var(--primary);cursor:pointer;transition:0.3s;}
-.tab-buttons button.active{background:var(--primary);color:#0d0d0d;}
-.tab-buttons button:hover{transform:scale(1.05);}
-
-/* Cards Grid */
-.cards-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px;}
-.card{background:var(--card-bg);border-radius:12px;padding:25px;text-align:center;transition:transform 0.3s, box-shadow 0.3s;position:relative;}
-.card i{font-size:2.5rem;color:var(--primary);margin-bottom:15px;}
-.card h3{color:var(--primary);margin-bottom:10px;font-size:1.3rem;}
-.card .btn{margin-top:10px;}
-.card:hover{transform:translateY(-8px);box-shadow:0 0 25px rgba(0,247,255,0.5);}
-
-/* Modal */
-.modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;padding:20px;}
-.modal-content{background:var(--card-bg);border-radius:12px;padding:30px;max-width:600px;width:100%;color:var(--text);text-align:left;position:relative;animation:fadeIn 0.3s ease;}
-.modal-content h3{margin-bottom:15px;color:var(--primary);}
-.modal-content p{margin-bottom:20px;font-size:1rem;line-height:1.6;}
-.close-btn{position:absolute;top:15px;right:20px;font-size:1.5rem;cursor:pointer;color:var(--primary);}
-@keyframes fadeIn{from{opacity:0;transform:translateY(-20px);}to{opacity:1;transform:translateY(0);}}
-
-/* CTA */
-.cta{text-align:center;padding:80px 20px;background: rgba(0,247,255,0.05);}
-
-/* Footer */
-footer{background:var(--footer-bg);color:var(--text);padding:40px 20px;text-align:center;}
-footer h3{margin-bottom:15px;color:var(--primary);}
-footer .social-links{margin-top:15px;display:flex;justify-content:center;gap:15px;}
-footer .social-links a{color:var(--primary);font-size:1.5rem;transition:0.3s;}
-footer .social-links a:hover{color:#fff;text-shadow:0 0 10px var(--primary);}
-footer p{margin-top:20px;font-size:0.9rem;}
-
-/* Responsivo */
-@media(max-width:768px){header{padding:15px 20px;}.hero h1{font-size:2.2rem;}.hero p{font-size:1rem;}.cards-grid{grid-template-columns:1fr;}}
-</style>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Header -->
-<header>
-  <a href="#home" class="logo"><i class="fas fa-robot"></i> DR9.AI</a>
-  <nav>
-    <ul>
-      <li><a href="#home">Início</a></li>
-      <li><a href="#services">Serviços</a></li>
-      <li><a href="#contact">Contato</a></li>
-    </ul>
-  </nav>
+<!-- PARTICLES -->
+<div id="particles-js"></div>
+
+<!-- EMOJIS FLUTUANTES -->
+<div class="floating floating-1">🚀</div>
+<div class="floating floating-2">🤖</div>
+<div class="floating floating-3">💡</div>
+
+<!-- HEADER -->
+<header id="header">
+  <div class="container">
+    <div class="header-content">
+      <a href="#" class="logo">
+        <img src="assets/logo.png" alt="DR9.AI" class="logo-icon">
+        <span>DR9.AI</span>
+      </a>
+      <button class="mobile-menu" id="mobileMenu"><i class="fas fa-bars"></i></button>
+      <nav id="mainNav">
+        <ul>
+          <li><a href="#home">Início</a></li>
+          <li><a href="#services">Serviços</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
 
-<!-- Hero -->
+<!-- HERO -->
 <section class="hero" id="home">
-  <h1 class="gradient-text">DR9.AI</h1>
-  <p class="typewriter">Softwares, IA e Automação Descomplicada</p>
-  <div class="hero-buttons">
-    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-    <a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
-  </div>
-  <span class="badge">✅ Suporte humano + IA em tempo real</span>
-</section>
+  <div class="container">
+    <div class="hero-content">
+      <h1>DR9.AI</h1>
+      <p class="hero-subtitle">Softwares, IA e Automação Descomplicada</p>
 
-<!-- Services Tabs -->
-<section class="tabs" id="services">
-  <div class="tab-buttons">
-    <button class="tab-btn active" data-tab="ia">IA e Automação</button>
-    <button class="tab-btn" data-tab="licencas">Licenças Digitais</button>
-    <button class="tab-btn" data-tab="consultoria">Consultoria em TI</button>
-    <button class="tab-btn" data-tab="sistemas">Sistemas Personalizados</button>
-  </div>
+      <div class="checkbox-list">
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
+      </div>
 
-  <!-- Tab Contents -->
-  <div class="tab-content" id="ia">
-    <div class="cards-grid">
-      <div class="card" data-description="Automatize tarefas repetitivas e manuais, economizando tempo e recursos.">
-        <i class="fas fa-robot"></i>
-        <h3>Automação de Processos (RPA)</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Atendimento 24/7 com integração a WhatsApp e Telegram para suporte automatizado.">
-        <i class="fas fa-comments"></i>
-        <h3>Chatbots Inteligentes</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Previsão de vendas e comportamento do usuário para decisões mais assertivas.">
-        <i class="fas fa-chart-line"></i>
-        <h3>Análise de Dados Preditiva</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Conecte sistemas sem intervenção manual, agilizando processos internos.">
-        <i class="fas fa-plug"></i>
-        <h3>Integração via APIs</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Soluções de IA adaptadas para cada cliente e necessidade específica.">
-        <i class="fas fa-brain"></i>
-        <h3>Machine Learning Personalizado</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
+      <div class="buttons">
+        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" id="whatsappBtn"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+        <a href="https://t.me/dr9iSuporte" class="btn btn-outline" id="telegramBtn"><i class="fab fa-telegram"></i> Falar no Telegram</a>
       </div>
     </div>
   </div>
+</section>
 
-  <div class="tab-content" id="licencas" style="display:none;">
-    <div class="cards-grid">
-      <div class="card" data-description="Licença digital para controle de horários e produtividade.">
-        <i class="fas fa-key"></i>
-        <h3>UClockTool</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
+<!-- FEATURES / SERVIÇOS -->
+<section class="features" id="services">
+  <div class="container">
+    <div class="section-title">
+      <h2>Nossas Soluções em IA</h2>
+      <p>Pré-visualize nossos serviços e escolha o que deseja adquirir</p>
+    </div>
+    <div class="features-grid">
+      
+      <!-- LICENÇAS -->
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-key"></i></div>
+        <h3>DM para Licenças Exclusivas</h3>
+        <p>Gerenciamento completo de licenças digitais com segurança avançada.</p>
+        <a href="#" class="btn-learn">Saiba Mais</a>
+        <span class="status status-available">Disponível</span>
       </div>
-      <div class="card" data-description="Licença digital para automação e análise avançada.">
-        <i class="fas fa-cogs"></i>
+
+      <!-- IA E AUTOMAÇÃO -->
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-brain"></i></div>
+        <h3>IA e Automação para Empreendedores</h3>
+        <p>Automação de planilhas, posts programados e suporte a sistemas de gestão.</p>
+        <a href="#" class="btn-learn">Saiba Mais</a>
+        <span class="status status-available">Disponível</span>
+      </div>
+
+      <!-- LICENÇAS DIGITAIS -->
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-id-card"></i></div>
+        <h3>Licenças Digitais Fáceis de Usar</h3>
+        <p>Integração com Adobe, Windows, Chimera, Unlock e outras ferramentas.</p>
+        <a href="#" class="btn-learn">Saiba Mais</a>
+        <span class="status status-available">Disponível</span>
+      </div>
+
+      <!-- UNLOCK TOOLS -->
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-unlock-alt"></i></div>
+        <h3>Unlock Tools</h3>
+        <p>FRP, recuperação de software e opções avançadas para desbloqueios.</p>
+        <a href="#" class="btn-learn">Saiba Mais</a>
+        <span class="status status-available">Disponível</span>
+      </div>
+
+      <!-- CHIMERA -->
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-tools"></i></div>
         <h3>Chimera</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
+        <p>FRP, recuperação de software e funções avançadas especializadas.</p>
+        <a href="#" class="btn-learn">Saiba Mais</a>
+        <span class="status status-available">Disponível</span>
       </div>
-      <div class="card" data-description="Conjunto de licenças estratégicas para equipes e empresas.">
-        <i class="fas fa-box"></i>
-        <h3>Pacote Tático</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-    </div>
-  </div>
 
-  <div class="tab-content" id="consultoria" style="display:none;">
-    <div class="cards-grid">
-      <div class="card" data-description="Identificação de vulnerabilidades e proteção de dados empresariais.">
-        <i class="fas fa-shield-alt"></i>
-        <h3>Auditoria e Segurança de Rede</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
+      <!-- PACOTE PRODUTIVO E DESIGN -->
+      <div class="feature-card">
+        <div class="feature-icon"><i class="fas fa-paint-brush"></i></div>
+        <h3>Pacote Produtivo & Design</h3>
+        <p>CorelDraw, Pacote Adobe e ferramentas essenciais para criatividade e produtividade.</p>
+        <a href="#" class="btn-learn">Saiba Mais</a>
+        <span class="status status-available">Disponível</span>
       </div>
-      <div class="card" data-description="Serviços de migração para AWS, Azure e Google Cloud.">
-        <i class="fas fa-cloud"></i>
-        <h3>Migração para Cloud</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Monitoramento e suporte contínuo para sistemas, servidores e redes.">
-        <i class="fas fa-tools"></i>
-        <h3>Suporte e Manutenção</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-    </div>
-  </div>
 
-  <div class="tab-content" id="sistemas" style="display:none;">
-    <div class="cards-grid">
-      <div class="card" data-description="Softwares sob medida para atender todas as necessidades do seu negócio.">
-        <i class="fas fa-laptop-code"></i>
-        <h3>Desenvolvimento Web/Mobile</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Controle de dados e relatórios avançados para gestão estratégica.">
-        <i class="fas fa-chart-pie"></i>
-        <h3>Dashboards Inteligentes</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
-      <div class="card" data-description="Conecte sistemas antigos com novas soluções digitais de forma eficiente.">
-        <i class="fas fa-plug"></i>
-        <h3>Integração de Sistemas</h3>
-        <a class="btn btn-outline know-more">Saiba Mais</a>
-      </div>
     </div>
   </div>
 </section>
-
-<!-- Modal -->
-<div class="modal" id="modal">
-  <div class="modal-content">
-    <span class="close-btn" id="closeModal">&times;</span>
-    <h3 id="modalTitle"></h3>
-    <p id="modalDesc"></p>
-  </div>
-</div>
 
 <!-- CTA -->
 <section class="cta" id="contact">
-  <h2>Pronto para revolucionar seu negócio?</h2>
-  <p>Entre em contato agora mesmo e descubra como a DR9.AI pode transformar sua operação com inteligência artificial</p>
-  <div class="hero-buttons">
-    <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary pulse"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-    <a href="https://t.me/dr9iSuporte" class="btn btn-outline pulse"><i class="fab fa-telegram"></i> Telegram</a>
+  <div class="container">
+    <div class="cta-content">
+      <h2>Pronto para revolucionar seu negócio?</h2>
+      <p>Entre em contato e descubra como a DR9.AI pode transformar sua operação com inteligência artificial.</p>
+      <div class="buttons">
+        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+        <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+      </div>
+    </div>
   </div>
 </section>
 
-<!-- Footer -->
+<!-- FOOTER -->
 <footer>
-  <h3>DR9.AI</h3>
-  <div class="social-links">
-    <a href="#"><i class="fab fa-whatsapp"></i></a>
-    <a href="#"><i class="fab fa-telegram"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-column">
+        <h3>DR9.AI</h3>
+        <p>Inteligência Artificial e Automação Descomplicada para empreendedores.</p>
+        <div class="social-links">
+          <a href="https://wa.me/message/JLUZNOGJKK4UK1"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://t.me/dr9iSuporte"><i class="fab fa-telegram"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3>Serviços</h3>
+        <ul>
+          <li>IA e Automação</li>
+          <li>Licenças Digitais</li>
+          <li>Unlock Tools</li>
+          <li>Chimera</li>
+          <li>Pacote Produtivo & Design</li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h3>Contato</h3>
+        <ul>
+          <li>WhatsApp: <a href="https://wa.me/message/JLUZNOGJKK4UK1">Clique aqui</a></li>
+          <li>Telegram: <a href="https://t.me/dr9iSuporte">Clique aqui</a></li>
+          <li>Email: contato@dr9ai.com</li>
+        </ul>
+      </div>
+    </div>
+    <div class="copyright">&copy; 2025 DR9.AI - Todos os direitos reservados.</div>
   </div>
-  <p>&copy; 2025 DR9.AI - Todos os direitos reservados.</p>
 </footer>
 
-<script>
-// Modal interativo
-const modal = document.getElementById('modal');
-const modalTitle = document.getElementById('modalTitle');
-const modalDesc = document.getElementById('modalDesc');
-const closeModal = document.getElementById('closeModal');
-
-document.querySelectorAll('.know-more').forEach(btn=>{
-  btn.addEventListener('click', e=>{
-    const card = e.target.closest('.card');
-    modalTitle.textContent = card.querySelector('h3').textContent;
-    modalDesc.textContent = card.dataset.description;
-    modal.style.display = 'flex';
-  });
-});
-
-closeModal.addEventListener('click', ()=>modal.style.display='none');
-window.addEventListener('click', e=>{ if(e.target===modal) modal.style.display='none'; });
-window.addEventListener('keydown', e=>{ if(e.key==='Escape') modal.style.display='none'; });
-
-// Tabs
-const tabs = document.querySelectorAll('.tab-btn');
-const contents = document.querySelectorAll('.tab-content');
-tabs.forEach(tab=>{
-  tab.addEventListener('click', ()=>{
-    tabs.forEach(t=>t.classList.remove('active'));
-    tab.classList.add('active');
-    contents.forEach(c=>c.style.display='none');
-    document.getElementById(tab.dataset.tab).style.display='grid';
-  });
-});
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
