Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DR9.AI - Inteligência Artificial e Automação Premium</title>
-<meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DR9.AI - Inteligência Artificial e Automação Premium</title>
+  <meta name="description" content="DR9.AI - Soluções em IA, automação e licenças digitais. Transforme seu negócio com tecnologia de ponta.">
+
+  <!-- FONTS & ICONS -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -49,12 +53,12 @@
       <div class="checkbox-list">
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">DM para Licenças Exclusivas</div></div>
         <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">IA e Automação para Empreendedores</div></div>
-        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Licenças Digitais Fáceis de Usar</div></div>
+        <div class="checkbox-item"><div class="checkbox-icon">✓</div><div class="checkbox-text">Unlock Tools e muito mais</div></div>
       </div>
 
       <div class="buttons">
-        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary" id="whatsappBtn"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
-        <a href="https://t.me/dr9iSuporte" class="btn btn-outline" id="telegramBtn"><i class="fab fa-telegram"></i> Falar no Telegram</a>
+        <a href="https://wa.me/message/JLUZNOGJKK4UK1" class="btn btn-primary"><i class="fab fa-whatsapp"></i> Falar no WhatsApp</a>
+        <a href="https://t.me/dr9iSuporte" class="btn btn-outline"><i class="fab fa-telegram"></i> Falar no Telegram</a>
       </div>
     </div>
   </div>
@@ -81,7 +85,7 @@
       <!-- IA E AUTOMAÇÃO -->
       <div class="feature-card">
         <div class="feature-icon"><i class="fas fa-brain"></i></div>
-        <h3>IA e Automação para Empreendedores</h3>
+        <h3>IA e Automação</h3>
         <p>Automação de planilhas, posts programados e suporte a sistemas de gestão.</p>
         <a href="#" class="btn-learn">Saiba Mais</a>
         <span class="status status-available">Disponível</span>
@@ -90,8 +94,8 @@
       <!-- LICENÇAS DIGITAIS -->
       <div class="feature-card">
         <div class="feature-icon"><i class="fas fa-id-card"></i></div>
-        <h3>Licenças Digitais Fáceis de Usar</h3>
-        <p>Integração com Adobe, Windows, Chimera, Unlock e outras ferramentas.</p>
+        <h3>Licenças Digitais</h3>
+        <p>Adobe, Windows, ferramentas de desbloqueio e softwares exclusivos.</p>
         <a href="#" class="btn-learn">Saiba Mais</a>
         <span class="status status-available">Disponível</span>
       </div>
@@ -109,7 +113,7 @@
       <div class="feature-card">
         <div class="feature-icon"><i class="fas fa-tools"></i></div>
         <h3>Chimera</h3>
-        <p>FRP, recuperação de software e funções avançadas especializadas.</p>
+        <p>FRP, reparo e funções avançadas para dispositivos móveis.</p>
         <a href="#" class="btn-learn">Saiba Mais</a>
         <span class="status status-available">Disponível</span>
       </div>
@@ -118,7 +122,7 @@
       <div class="feature-card">
         <div class="feature-icon"><i class="fas fa-paint-brush"></i></div>
         <h3>Pacote Produtivo & Design</h3>
-        <p>CorelDraw, Pacote Adobe e ferramentas essenciais para criatividade e produtividade.</p>
+        <p>CorelDraw, Adobe e ferramentas de design para criadores e empresas.</p>
         <a href="#" class="btn-learn">Saiba Mais</a>
         <span class="status status-available">Disponível</span>
       </div>
@@ -178,6 +182,8 @@
   </div>
 </footer>
 
+<!-- SCRIPTS -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
